--- a/vercel.json
+++ b/vercel.json
@@ -1,8 +1,9 @@
 {
   "version": 2,
-  "functions": {
-    "api/calc.js": {
-      "runtime": "nodejs18.x"
+  "builds": [
+    {
+      "src": "api/calc.js",
+      "use": "@vercel/node"
     }
-  }
+  ]
 }
